# projeto-mc906

./: .gitignore  .gitmodules  MC906test.ipynb  README.md  analisisHelp.md  data.yaml  pyproject.toml  requirements.txt  testecam.py
Food-22/: README.dataset.txt  README.roboflow.txt  data.yaml
Food-22/test/labels/: 20231106_120645_jpg.rf.3d3a5466746bfc9fc897960f46870d21.txt  20231107_115811_jpg.rf.5b3673341d4b4080f60828046cf7c9d5.txt  20231107_115906_jpg.rf.072dee2de2a5d90f7d616bd2ce1c8429.txt  20231107_121705_jpg.rf.791c3b8aac9bf8c0d159b567602a1be2.txt  20231107_121846_jpg.rf.62c73ba2cd1eae50d4a8d298f07a2203.txt  20231107_122036_jpg.rf.59aa7fe7ad8ae6702c131a001cb88b9f.txt  (+209 more)
Food-22/valid/: labels.cache
app/: __main__.py  requirements.txt  setup.py  weight.py
app/lib/: modules.py  visualize_and_export_DS.py
app/main/image_version/: main.py
app/modules/: modules.py
assets/: main.tex
datasets/aicrowd_food_recognition_benchmark_2022_reduced/: README.md  create_yolo_labels_and_dirs.py  separate_train_val_test.py
goodTools/: DownloadAutoCOLAB.ipynb
lib/: proj_mc906_plotter.py  requirements.txt
lib/appv0/: predict.py  realtime.py
lib/dados-aicrowd/: AI_queries.py  _classes_round2_training.txt
notebooks/: colab_yolov8_final_training_notebook.ipynb  fineTuningTUTO.ipynb  kaggle_yolov8_final_training_notebook.ipynb  yolo_tutorial.ipynb  yolov8_final_training_notebook.ipynb
notebooks/analysis/: aicrowd_food_recognition_benchmark_2022.ipynb  category_replace.csv
notebooks/examples/: yolov5.ipynb  yolov8.ipynb
report/: main.tex  refs.bib
(+5491 files in other folders)
